Added: annotations for validation, checks by canConvert(), builder for OnePage; Fixed: date format for saving to DB