@@ -2,6 +2,11 @@ package by.it_academy.fitnessstudio.service;
 
 import by.it_academy.fitnessstudio.core.dto.*;
 import by.it_academy.fitnessstudio.core.dto.error.ErrorCode;
+import by.it_academy.fitnessstudio.core.dto.ingredient.Ingredient;
+import by.it_academy.fitnessstudio.core.dto.ingredient.IngredientCalculated;
+import by.it_academy.fitnessstudio.core.dto.recipe.Recipe;
+import by.it_academy.fitnessstudio.core.dto.recipe.RecipeCreate;
+import by.it_academy.fitnessstudio.core.exception.ConversionTimeException;
 import by.it_academy.fitnessstudio.core.exception.InvalidInputServiceMultiException;
 import by.it_academy.fitnessstudio.core.exception.InvalidInputServiceSingleException;
 import by.it_academy.fitnessstudio.entity.IngredientEntity;
@@ -10,14 +15,17 @@ import by.it_academy.fitnessstudio.repositories.api.RecipeEntityRepository;
 import by.it_academy.fitnessstudio.service.api.IProductService;
 import by.it_academy.fitnessstudio.service.api.IRecipeService;
 import by.it_academy.fitnessstudio.validator.api.IValidator;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Past;
 import org.springframework.core.convert.ConversionService;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -27,7 +35,10 @@ public class RecipeService implements IRecipeService {
     private final ConversionService conversionService;
     private final IValidator<RecipeCreate> validator;
 
-    public RecipeService(RecipeEntityRepository repository, IProductService productService, ConversionService conversionService, IValidator<RecipeCreate> validator) {
+    public RecipeService(RecipeEntityRepository repository,
+                         IProductService productService,
+                         ConversionService conversionService,
+                         IValidator<RecipeCreate> validator) {
         this.repository = repository;
         this.productService = productService;
         this.conversionService = conversionService;
@@ -35,12 +46,9 @@ public class RecipeService implements IRecipeService {
     }
 
     @Override
-    public void save(RecipeCreate recipeCreate) {
-        if(recipeCreate == null) {
-            throw new InvalidInputServiceSingleException("Recipe information not submitted for update", ErrorCode.ERROR);
-        }
-
+    public void save(@NotNull RecipeCreate recipeCreate) {
         validator.validate(recipeCreate);
+
         checkUniqueTitle(recipeCreate);
         checkProductExist(recipeCreate);
 
@@ -50,9 +58,10 @@ public class RecipeService implements IRecipeService {
                 .map(ingredient -> new IngredientEntity(
                         productService.getEntity(ingredient.getProduct().getUuid()),
                         ingredient.getWeight()))
-                .toList();
+                .collect(Collectors.toList());
 
-        LocalDateTime dtCreate = LocalDateTime.now();
+        LocalDateTime dtCreate = LocalDateTime.now().truncatedTo(ChronoUnit.MILLIS);
+
         RecipeEntity recipeEntity = RecipeEntity.RecipeEntityBuilder.create()
                 .setUuid(UUID.randomUUID())
                 .setDtCreate(dtCreate)
@@ -63,79 +72,35 @@ public class RecipeService implements IRecipeService {
     }
 
     @Override
-    public OnePage<Recipe> getRecipesPage(Integer page, Integer size) {
-        InvalidInputServiceMultiException multiException = new InvalidInputServiceMultiException(ErrorCode.STRUCTURED_ERROR);
+    public OnePage<Recipe> getRecipesPage(@NotNull Pageable pageable) {
 
-        if(page == null || page < 0) {
-            multiException.addSuppressed(new InvalidInputServiceMultiException("Invalid field value. Field must be 0 or greater", "page"));
-        }
-
-        if(size == null || size <= 0) {
-            multiException.addSuppressed(new InvalidInputServiceMultiException("Invalid field value. Field must be greater than 0", "size"));
-        }
-
-        if(multiException.getSuppressed().length != 0) {
-            throw multiException;
-        }
-
-        Page<RecipeEntity> all = repository.findAll(PageRequest.of(page, size));
+        Page<RecipeEntity> all = repository.findAll(pageable);
 
         List<Recipe> recipes = all.get().map(entity -> calculateRecipe(entity)).toList();
 
-        int number = all.getNumber();
-        int sizePage = all.getSize();
-        int totalPages = all.getTotalPages();
-        long totalElements = all.getTotalElements();
-        boolean first = all.isFirst();
-        int numberOfElements = all.getNumberOfElements();
-        boolean last = all.isLast();
-
-        return new OnePage<>(number, sizePage, totalPages, totalElements, first, numberOfElements, last, recipes);
-        //return createOnePage(all, recipes);
+        return OnePage.OnePageBuilder.create(recipes)
+                .setNumber(all.getNumber())
+                .setSize(all.getSize())
+                .setTotalPages(all.getTotalPages())
+                .setTotalElements(all.getTotalElements())
+                .setFirst(all.isFirst())
+                .setNumberOfElements(all.getNumberOfElements())
+                .setLast(all.isLast())
+                .build();
     }
 
     @Override
-    public void update(UUID uuid, Long dtUpdate, RecipeCreate recipeCreate) {//д/приходить LDT во второй параметр
-        InvalidInputServiceMultiException multiException = new InvalidInputServiceMultiException(ErrorCode.STRUCTURED_ERROR);
-
-        if(uuid == null) {
-            multiException.addSuppressed(new InvalidInputServiceMultiException("UUID not entered", "uuid"));
-        }
-
-        if(dtUpdate == null) {
-            multiException.addSuppressed(new InvalidInputServiceMultiException("No latest update date", "dt_update"));
-        }
-        if(dtUpdate != null) {
-            if (dtUpdate <= 0) {
-                multiException.addSuppressed(new InvalidInputServiceMultiException("Field must be a positive number", "dt_update"));
-            }
-        }
-
-        if(recipeCreate == null) {
-            multiException.addSuppressed(new InvalidInputServiceMultiException("Recipe information not submitted for update", "recipe"));
-        }
-
-        if(multiException.getSuppressed().length != 0) {
-            throw multiException;
-        }
-
+    public void update(@NotNull UUID uuid, @NotNull @Past LocalDateTime dtUpdate, @NotNull RecipeCreate recipeCreate) {
         validator.validate(recipeCreate);
 
         String recipeCreateTitle = recipeCreate.getTitle();
 
-        Optional<RecipeEntity> recipeById = repository.findById(uuid);
-
-        if(recipeById.isEmpty()) {
-            throw new InvalidInputServiceSingleException("Recipe with this uuid doesn't exist", ErrorCode.ERROR);
-        }
+        RecipeEntity entity = repository.findById(uuid)
+                .orElseThrow(() -> new InvalidInputServiceSingleException("Recipe with this uuid doesn't exist", ErrorCode.ERROR));
 
         checkProductExist(recipeCreate);
 
-        RecipeEntity entity = recipeById.get();
-
-        Long timeUpdate = conversionService.convert(entity.getDtUpdate(), Long.class);
-
-        if(timeUpdate.equals(dtUpdate)) {
+        if(entity.getDtUpdate().equals(dtUpdate)) {
             if(!entity.getTitle().equals(recipeCreateTitle)) {
                 checkUniqueTitle(recipeCreate);
             }
@@ -154,13 +119,13 @@ public class RecipeService implements IRecipeService {
         }
     }
 
-    private void checkUniqueTitle(RecipeCreate recipeCreate) {
+    private void checkUniqueTitle(@NotNull RecipeCreate recipeCreate) {
         if(repository.existsByTitle(recipeCreate.getTitle())) {
             throw new InvalidInputServiceSingleException("Not a unique recipe name", ErrorCode.ERROR);
         }
     }
 
-    private void checkProductExist(RecipeCreate recipeCreate) {
+    private void checkProductExist(@NotNull RecipeCreate recipeCreate) {
         InvalidInputServiceMultiException multiException = new InvalidInputServiceMultiException(ErrorCode.STRUCTURED_ERROR);
 
         List<Ingredient> composition = recipeCreate.getComposition();
@@ -187,17 +152,21 @@ public class RecipeService implements IRecipeService {
         Recipe.RecipeBuilder recipeBuilder = Recipe.RecipeBuilder.create();
 
         recipeBuilder.setUuid(entity.getUuid())
-                .setDtCreate(conversionService.convert(entity.getDtCreate(), Long.class))
-                .setDtUpdate(conversionService.convert(entity.getDtUpdate(), Long.class))
+                .setDtCreate(entity.getDtCreate())
+                .setDtUpdate(entity.getDtUpdate())
                 .setTitle(entity.getTitle());
 
         List<IngredientEntity> composition = entity.getComposition();
 
         List<IngredientCalculated> compositionDTO = new ArrayList<>();
 
+        if(!conversionService.canConvert(IngredientEntity.class, IngredientCalculated.class)) {
+            throw new ConversionTimeException("Unable to convert", ErrorCode.ERROR);
+        }
+
         for (IngredientEntity ingredientEntity : composition) {
 
-            IngredientCalculated ingredientCalculated = calculateIngredient(ingredientEntity);
+            IngredientCalculated ingredientCalculated = conversionService.convert(ingredientEntity, IngredientCalculated.class);
 
             compositionDTO.add(ingredientCalculated);
 
@@ -209,17 +178,14 @@ public class RecipeService implements IRecipeService {
         }
 
         int scale = 2;
+        RoundingMode roundingMode = RoundingMode.HALF_UP;
+
         return recipeBuilder.setComposition(compositionDTO)
                 .setWeight(totalWeight.intValue())
                 .setCalories(totalCalories.intValue())
-                .setProteins(totalProteins.setScale(scale, RoundingMode.HALF_UP).doubleValue())
-                .setFats(totalFats.setScale(scale, RoundingMode.HALF_UP).doubleValue())
-                .setCarbohydrates(totalCarbohydrates.setScale(scale, RoundingMode.HALF_UP).doubleValue())
+                .setProteins(totalProteins.setScale(scale, roundingMode).doubleValue())
+                .setFats(totalFats.setScale(scale, roundingMode).doubleValue())
+                .setCarbohydrates(totalCarbohydrates.setScale(scale, roundingMode).doubleValue())
                 .build();
     }
-
-    private IngredientCalculated calculateIngredient(IngredientEntity ingredientEntity){
-        return conversionService.convert(ingredientEntity, IngredientCalculated.class);
-    }
-
 }
